--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
                 </ul>
         </div> 
     </header>
+
     <!-- MAIN -->
 
 
     <main>
-        <section class="hero overlay">
+        <!-- <section class="hero overlay">
             <div class="container">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                     <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
             </div>
-        </section>
+        </section> -->
 
-        <section class="section-specifics">
-            <!-- Особенности -->
-                <!-- <h2>Особенности</h2> -->
+         <!-- <h2>Особенности</h2> -->
+        <!-- <section class="section-specifics">
             <div class="container">
                 <ul class="features list">
                     <li class="features-item">
@@ -100,9 +100,10 @@
                     </li> 
                 </ul> 
             </div> 
-        </section>
-    <!-- Чем мы занимаемся -->
-    <section class="section-function">
+        </section>  -->
+    
+        <!-- Чем мы занимаемся -->
+    <!-- <section class="section-function">
         <div class="container">
             <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="section-work list">
@@ -135,9 +136,10 @@
                             </li>
                 </ul>
         </div>
-    </section>
+    </section> -->
+    
     <!-- Наша команда -->
-    <section class="section command">
+    <!-- <section class="section command">
         <div class="container">
             <h2 class="section-title">Наша команда</h2>
                 <ul class="section-command list">
@@ -290,9 +292,11 @@
                         </div>
                 </ul>
         </div>
-    </section>
+    </section> -->
 
-    <section class="section company-clients">
+
+    <!-- Клиенты -->
+    <!-- <section class="section company-clients">
             <div class="container">
                 <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="company-list list">
@@ -340,12 +344,12 @@
                     </li>
                 </ul>
             </div>
-    </section>
+    </section> -->
     </main>
 
     <!-- FOOTER -->
 
-    <footer class="section-footer">
+    <!-- <footer class="section-footer">
         <div class="container footer">
             <div class="footer-adress">
                 <a href="./index.html" class="footer-logo">
@@ -404,9 +408,11 @@
                     </form>
                 </div>
         </div>
-    </footer>
+    </footer> -->
 
-     <div class="backdrop is-hidden" data-modal>
+    <!-- MODAL -->
+
+     <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="modal-close-btn">
@@ -456,9 +462,10 @@
                 <button type="submit" class="form-button">Отправить</button>
             </form>
         </div>
-    </div> 
+    </div>  -->
 
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 
 </body>
 </html>
