--- a/index.html
+++ b/index.html
@@ -68,19 +68,25 @@
 
            <ul class="mobile-menu-auth-nav list">
                <li class="mobile-menu-auth-item">
-                   <a href="mailtoinfo@devstudio.com" class="mobile-menu-auth-link link">
-                       <svg class="mobile-menu-auth-icon" width="16" height="12">
-                           <use href="./images/sprite.svg#envelope"></use>
-                       </svg>info@devstudio.com
+                   <a href="tel:+380961111111" class="mobile-menu-auth-link-tel link">
+                       +38 096 111 11 11
                    </a>
                 </li>
                <li class="mobile-menu-auth-item">
-                   <a href="tel:+380961111111" class="mobile-menu-auth-link link">
-                       <svg class="mobile-menu-auth-icon" width="10" height="16">
-                           <use href="./images/sprite.svg#smartphone"></use>
-                       </svg>+38 096 111 11 11
+                   <a href="mailtoinfo@devstudio.com" class="mobile-menu-auth-link-mail link">
+                       info@devstudio.com
                    </a>
                 </li>
+           </ul>
+           <ul class="mobile-menu-social list">
+               <li class="mobile-menu-social-item">
+                   <a href="#" class="mobile-menu-social-link link">Instagram</a></li>
+               <li class="mobile-menu-social-item">
+                   <a href="#" class="mobile-menu-social-link link">Twitter</a></li>
+               <li class="mobile-menu-social-item">
+                   <a href="#" class="mobile-menu-social-link link">Facebook</a></li>
+               <li class="mobile-menu-social-item">
+                   <a href="#" class="mobile-menu-social-link link">LinkedIn</a></li>
            </ul>
 
 
