--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </section>
 
          <!-- <h2>Особенности</h2> -->
-        <!-- <section class="section-specifics">
+        <section class="section-specifics">
             <div class="container">
                 <ul class="features list">
                     <li class="features-item">
@@ -145,10 +145,10 @@
                     </li> 
                 </ul> 
             </div> 
-        </section>  -->
+        </section> 
     
         <!-- Чем мы занимаемся -->
-    <!-- <section class="section-function">
+    <section class="section-function">
         <div class="container">
             <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="section-work list">
@@ -181,7 +181,7 @@
                             </li>
                 </ul>
         </div>
-    </section> -->
+    </section>
     
     <!-- Наша команда -->
     <!-- <section class="section command">
