--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 
     <!-- FOOTER -->
 
-    <!-- <footer class="section-footer">
+    <footer class="section-footer">
         <div class="container footer">
             <div class="footer-adress">
                 <a href="./index.html" class="footer-logo">
@@ -526,7 +526,7 @@
                     </form>
                 </div>
         </div>
-    </footer> -->
+    </footer>
 
     <!-- MODAL -->
 
