--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 
     <!-- MODAL -->
 
-     <!-- <div class="backdrop is-hidden" data-modal>
+     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="modal-close-btn">
@@ -577,7 +577,7 @@
                 <button type="submit" class="form-button">Отправить</button>
             </form>
         </div>
-    </div>  -->
+    </div> 
 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
