--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                     id="agreement"
                     class="form-check visually-hidden">
 
-                    <label for="agreement" class="check-label">Соглашаюсь с рассылкой и принимаю &nbsp;
+                    <label for="agreement" class="check-label"><span>Соглашаюсь с рассылкой</span> и принимаю &nbsp;
                         <a href="#" class="accept">Условия договора</a>
                     </label>
                     </div>
