--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,7 @@
                <li class="mobile-menu-social-item">
                    <a href="#" class="mobile-menu-social-link link">LinkedIn</a></li>
            </ul>
+        </div>
     </header>
 
     <!-- MAIN -->
