--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
@@ -88,6 +87,7 @@
                <li class="mobile-menu-social-item">
                    <a href="#" class="mobile-menu-social-link link">LinkedIn</a></li>
            </ul>
+        </div>
     </header>
     <!-- MAIN -->
 
