--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <use href="./images/sprite.svg#burger-icon"></use>
             </svg>
         </button>
-            <ul class="auth-nav list">
+                <ul class="auth-nav list">
                 <li class="auth-nav-item">
                     <a href="mailtoinfo@devstudio.com" class="auth-nav-link envelope">
                         <svg class="icon-nav" width="16" height="12">
@@ -64,8 +64,8 @@
                <li class="mobile-menu-site-item">
                    <a href="#" class="mobile-menu-site-link link">Контакты</a></li>
            </ul>
-
-           <ul class="mobile-menu-auth-nav list">
+        <div>
+                <ul class="mobile-menu-auth-nav list">
                <li class="mobile-menu-auth-item">
                    <a href="tel:+380961111111" class="mobile-menu-auth-link-tel link">
                        +38 096 111 11 11
@@ -87,7 +87,8 @@
                <li class="mobile-menu-social-item">
                    <a href="#" class="mobile-menu-social-link link">LinkedIn</a></li>
            </ul>
-        </div>
+        </div>  
+    </div>
     </header>
     <!-- MAIN -->
 
@@ -207,13 +208,13 @@
                             <source srcset="./images/images/tablet/igor-tablet.webp 1x, ./images/images/tablet/igor-tablet@2x.webp 2x" 
                                     media="(min-width: 768px)" type="image/webp">
                             <source srcset="./images/images/mobile/igor-mobile.webp 1x, ./images/images/mobile/igor-mobile@2x.webp 2x" 
-                                    media="(min-width: 480px)" type="image/webp">
+                                    media="(min-width: 320px)" type="image/webp">
                             <source srcset="./images/images/desktop/igor-desktop.jpg 1x, ./images/images/desktop/igor-desktop@2x.jpg 2x" 
                                     media="(min-width: 1200px)">
                             <source srcset="./images/images/tablet/igor-tablet.jpg 1x, ./images/images/tablet/igor-tablet@2x.jpg 2x" 
                                     media="(min-width: 768px)">
                             <source srcset="./images/images/mobile/igor-mobile.jpg 1x, ./images/images/mobile/igor-mobile@2x.jpg 2x" 
-                                    media="(min-width: 480px)">
+                                    media="(min-width: 320px)">
                             <img src="./images/team/igor.jpg" alt="Игорь Демьяненко">
                         </picture>
                         
@@ -259,13 +260,13 @@
                             <source srcset="./images/images/tablet/olga-tablet.webp 1x, ./images/images/tablet/olga-tablet@2x.webp 2x" 
                                     media="(min-width: 768px)" type="image/webp">
                             <source srcset="./images/images/mobile/olga-mobile.webp 1x, ./images/images/mobile/olga-mobile@2x.webp 2x" 
-                                    media="(min-width: 480px)" type="image/webp">
+                                    media="(min-width: 320px)" type="image/webp">
                             <source srcset="./images/images/desktop/olga-desktop.jpg 1x, ./images/images/desktop/olga-desktop@2x.jpg 2x" 
                                     media="(min-width: 1200px)">
                             <source srcset="./images/images/tablet/olga-tablet.jpg 1x, ./images/images/tablet/olga-tablet@2x.jpg 2x" 
                                     media="(min-width: 768px)">
                             <source srcset="./images/images/mobile/olga-mobile.jpg 1x, ./images/images/mobile/olga-mobile@2x.jpg 2x" 
-                                    media="(min-width: 480px)">
+                                    media="(min-width: 320px)">
                             <img src="./images/team/olga.jpg" alt="Ольга Репина">
                         </picture>
                         <div class="masters-contact">
@@ -310,13 +311,13 @@
                             <source srcset="./images/images/tablet/nikolay-tablet.webp 1x, ./images/images/tablet/nikolay-tablet@2x.webp 2x" 
                                     media="(min-width: 768px)" type="image/webp">
                             <source srcset="./images/images/mobile/nikolay-mobile.webp 1x, ./images/images/mobile/nikolay-mobile@2x.webp 2x" 
-                                    media="(min-width: 480px)" type="image/webp">
+                                    media="(min-width: 320px)" type="image/webp">
                             <source srcset="./images/images/desktop/nikolay-desktop.jpg 1x, ./images/images/desktop/nikolay-desktop@2x.jpg 2x" 
                                     media="(min-width: 1200px)">
                             <source srcset="./images/images/tablet/nikolay-tablet.jpg 1x, ./images/images/tablet/nikolay-tablet@2x.jpg 2x" 
                                     media="(min-width: 768px)">
                             <source srcset="./images/images/mobile/nikolay-mobile.jpg 1x, ./images/images/mobile/nikolay-mobile@2x.jpg 2x" 
-                                    media="(min-width: 480px)">
+                                    media="(min-width: 320px)">
                             <img src="./images/team/nikolay.jpg" alt="Николай Тарасов">
                         </picture>
                         <div class="masters-contact">
@@ -361,13 +362,13 @@
                             <source srcset="./images/images/tablet/michael-tablet.webp 1x, ./images/images/tablet/michael-tablet@2x.webp 2x" 
                                     media="(min-width: 768px)" type="image/webp">
                             <source srcset="./images/images/mobile/michael-mobile.webp 1x, ./images/images/mobile/michael-mobile@2x.webp 2x" 
-                                    media="(min-width: 480px)" type="image/webp">
+                                    media="(min-width: 320px)" type="image/webp">
                             <source srcset="./images/images/desktop/michael-desktop.jpg 1x, ./images/images/desktop/michael-desktop@2x.jpg 2x" 
                                     media="(min-width: 1200px)">
                             <source srcset="./images/images/tablet/michael-tablet.jpg 1x, ./images/images/tablet/michael-tablet@2x.jpg 2x" 
                                     media="(min-width: 768px)">
                             <source srcset="./images/images/mobile/michael-mobile.jpg 1x, ./images/images/mobile/michael-mobile@2x.jpg 2x" 
-                                    media="(min-width: 480px)">
+                                    media="(min-width: 320px)">
                             <img src="./images/team/michele.jpg" alt="Михаил Ермаков">
                         </picture>
                         
