--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,14 @@
 
     <!-- HEADER -->
 
-    <header class="header">
+   <header class="header">
         <div class="container header-nav">
         <nav class="navigation">
             <a href="./index.html" class="logo">
                 <span class="logo-title">Web</span>Studio
             </a>
             <ul class="site-nav list">
-                <li class="site-nav-item"><a href="./index.html" class="site-nav-link">Студия</a></li>
+                <li class="site-nav-item"><a href="./index.html" class="site-nav-link ">Студия</a></li>
                 <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link current">Портфолио</a></li>
                 <li class="site-nav-item"><a href="#" class="site-nav-link">Контакты</a></li>
             </ul>
@@ -32,7 +32,7 @@
                 <use href="./images/sprite.svg#burger-icon"></use>
             </svg>
         </button>
-            <ul class="auth-nav list">
+                <ul class="auth-nav list">
                 <li class="auth-nav-item">
                     <a href="mailtoinfo@devstudio.com" class="auth-nav-link envelope">
                         <svg class="icon-nav" width="16" height="12">
@@ -59,14 +59,14 @@
             </button>
            <ul class="mobile-menu-site-nav list">
                <li class="mobile-menu-site-item">
-                   <a href="./index.html" class="mobile-menu-site-link link">Студия</a></li>
+                   <a href="./index.html" class="mobile-menu-site-link link ">Студия</a></li>
                <li class="mobile-menu-site-item">
                    <a href="./portfolio.html" class="mobile-menu-site-link link current">Портфолио</a></li>
                <li class="mobile-menu-site-item">
                    <a href="#" class="mobile-menu-site-link link">Контакты</a></li>
            </ul>
-
-           <ul class="mobile-menu-auth-nav list">
+        <div>
+                <ul class="mobile-menu-auth-nav list">
                <li class="mobile-menu-auth-item">
                    <a href="tel:+380961111111" class="mobile-menu-auth-link-tel link">
                        +38 096 111 11 11
@@ -88,7 +88,8 @@
                <li class="mobile-menu-social-item">
                    <a href="#" class="mobile-menu-social-link link">LinkedIn</a></li>
            </ul>
-        </div>
+        </div>  
+    </div>
     </header>
 
     <!-- MAIN -->
